update service section

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 							<i class="fa-solid fa-book"></i>
 						</div>
 						<div class="desc">
-							<span>284+</span>
-							<span>Total Courses</span>
+							<span>381+</span>
+							<span>Available Courses</span>
 						</div>
 					</div>
 
 					<div class="courses-ratings">
-						<span>4.7<i class="fa-solid fa-star"></i></span>
-						<span>Ratings (58k)</span>
+						<span>5.2<i class="fa-solid fa-star"></i></span>
+						<span>Ratings (77k)</span>
 					</div>
 				</div>
 
@@ -89,7 +89,7 @@
 
 <!--   *** Partners Section Starts ***   -->
 <section class="partners">
-	<h3>Our trusted partners around the world</h3>
+	<h3>Our Worldwide Network of Trusted Partners</h3>
 	<div class="owl-carousel owl-theme partners-slider">
 
     	<div class="item brand-item">
@@ -119,8 +119,9 @@
 <section class="services" id="services">
 	<!--   *** Services Header Starts ***   -->
 	<header class="section-header">
-		<h1>Why Choose Us</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<h1>Why Partner With Us</h1>
+<p>Experience excellence with our expert team, committed to delivering quality and innovation in every project we undertake.</p>
+
 	</header>
 	<!--   *** Services Header Ends ***   -->
 	<!--   *** Services Contents Starts ***   -->
@@ -131,8 +132,9 @@
 				<i class="fa-solid fa-calendar"></i>
 			</div>
 			<div class="service-desc">
-				<h2>Flexible Timing</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h2>Convenient Scheduling</h2>
+<p>Enjoy the freedom to learn at your own pace with our customizable schedules, designed to fit seamlessly into your lifestyle.</p>
+
 			</div>
 		</div>
 
@@ -141,8 +143,9 @@
 				<i class="fa-solid fa-users"></i>
 			</div>
 			<div class="service-desc">
-				<h2>Expert Teachers</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h2>Skilled Instructors</h2>
+<p>Learn from industry-leading professionals who bring a wealth of knowledge and experience to help you succeed.</p>
+
 			</div>
 		</div>
 
@@ -151,8 +154,9 @@
 				<i class="fa-solid fa-clock"></i>
 			</div>
 			<div class="service-desc">
-				<h2>24/7 Live Support</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h2>Round the Clock Assistance</h2>
+<p>Get help whenever you need it with our dedicated support team available 24/7 to address your questions and concerns.</p>
+
 			</div>
 		</div>
 
