--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
 	<!--   *** Courses Header Starts ***   -->
 	<header class="section-header">
 		<div class="header-text">
-			<h1>Choose Your Favourite Course</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h1>Select Your Preferred Course</h1>
+<p>Explore a variety of courses tailored to your interests and career goals, and start your learning journey today.</p>
+
 		</div>
 		<button class="courses-btn btn">View All</button>
 	</header>
@@ -182,10 +183,11 @@
 		<div class="course-card">
 			<img src="images/courses/course-1.jpg">
 			<div class="category">
-				<div class="subject"><h3>Design</h3></div>
+				<div class="subject"><h3>Development</h3></div>
 				<img src="images/courses/teacher-1.jpg">
 			</div>
-			<h2 class="course-title">Learn Figma: This is some dummy text demonistrating the title</h2>
+			<h2 class="course-title">Master Next.js: A Comprehensive Guide to Building React Applications</h2>
+
 			<div class="course-desc">
 				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
 				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
@@ -197,46 +199,31 @@
 		</div>
 
 		<div class="course-card">
-			<img src="images/courses/course-1.jpg">
-			<div class="category">
-				<div class="subject"><h3>Design</h3></div>
-				<img src="images/courses/teacher-1.jpg">
-			</div>
-			<h2 class="course-title">Learn Figma: This is some dummy text demonistrating the title</h2>
-			<div class="course-desc">
-				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
-				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
-			</div>
-			<div class="course-ratings">
-				<span>4.9 <i class="fa-solid fa-star"></i></span>
-				<span><b>$</b>120.00</span>
-			</div>
-		</div>
-
-		<div class="course-card">
-			<img src="images/courses/course-1.jpg">
-			<div class="category">
-				<div class="subject"><h3>Design</h3></div>
-				<img src="images/courses/teacher-1.jpg">
-			</div>
-			<h2 class="course-title">Learn Figma: This is some dummy text demonistrating the title</h2>
-			<div class="course-desc">
-				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
-				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
-			</div>
-			<div class="course-ratings">
-				<span>4.9 <i class="fa-solid fa-star"></i></span>
-				<span><b>$</b>120.00</span>
-			</div>
-		</div>
-
-		<div class="course-card">
-			<img src="images/courses/course-1.jpg">
+			<img src="images/courses/course-2.jpg">
 			<div class="category">
 				<div class="subject"><h3>Development</h3></div>
 				<img src="images/courses/teacher-1.jpg">
 			</div>
-			<h2 class="course-title">Learn JavaScript: This is some dummy text demonistrating the title</h2>
+			<h2 class="course-title">Master React Native: Build Stunning Mobile Applications</h2>
+
+			<div class="course-desc">
+				<span><i class="fa-solid fa-video"></i> 47 Videos</span>
+				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
+			</div>
+			<div class="course-ratings">
+				<span>4.9 <i class="fa-solid fa-star"></i></span>
+				<span><b>$</b>120.00</span>
+			</div>
+		</div>
+
+		<div class="course-card">
+			<img src="images/courses/course-3.jpg">
+			<div class="category">
+				<div class="subject"><h3>Development</h3></div>
+				<img src="images/courses/teacher-1.jpg">
+			</div>
+			<h2 class="course-title">Learn Node.js: Build Scalable Server-Side Applications</h2>
+
 			<div class="course-desc">
 				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
 				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
@@ -248,12 +235,13 @@
 		</div>
 
 		<div class="course-card">
-			<img src="images/courses/course-1.jpg">
+			<img src="images/courses/course-4.jpg">
 			<div class="category">
 				<div class="subject"><h3>Development</h3></div>
 				<img src="images/courses/teacher-1.jpg">
 			</div>
-			<h2 class="course-title">Learn JavaScript: This is some dummy text demonistrating the title</h2>
+			<h2 class="course-title">Learn Blockchain: Unlock the Potential of Decentralized Technology</h2>
+
 			<div class="course-desc">
 				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
 				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
@@ -265,12 +253,31 @@
 		</div>
 
 		<div class="course-card">
-			<img src="images/courses/course-1.jpg">
+			<img src="images/courses/course-5.jpg">
 			<div class="category">
 				<div class="subject"><h3>Development</h3></div>
 				<img src="images/courses/teacher-1.jpg">
 			</div>
-			<h2 class="course-title">Learn JQuery: This is some dummy text demonistrating the title</h2>
+			<h2 class="course-title">Learn DevOps: Master the Art of Continuous Integration and Deployment</h2>
+
+			<div class="course-desc">
+				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
+				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
+			</div>
+			<div class="course-ratings">
+				<span>4.9 <i class="fa-solid fa-star"></i></span>
+				<span><b>$</b>120.00</span>
+			</div>
+		</div>
+
+		<div class="course-card">
+			<img src="images/courses/course-6.jpg">
+			<div class="category">
+				<div class="subject"><h3>Development</h3></div>
+				<img src="images/courses/teacher-1.jpg">
+			</div>
+			<h2 class="course-title">Learn Java: Master the Foundations of Object-Oriented Programming</h2>
+
 			<div class="course-desc">
 				<span><i class="fa-solid fa-video"></i> 45 Videos</span>
 				<span><i class="fa-solid fa-users"></i> 2154+ Students</span>
