--- a/index.html
+++ b/index.html
@@ -297,8 +297,9 @@
 <section class="categories" id="categories">
 	<!--   === Categories Section Header Starts ===   -->
 	<header class="section-header">
-		<h1>Brouse Courses By Categories</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<h1>Explore Courses by Category</h1>
+<p>Dive into a wide range of subjects and find the perfect course tailored to your interests and career aspirations.</p>
+
 	</header>
 	<!--   === Categories Section Header Ends ===   -->
 	<!--   === Categories Section Contents Starts ===   -->
@@ -309,8 +310,9 @@
 				<i class="fa-solid fa-palette"></i>
 			</div>
 			<div class="category-desc">
-				<h3>Designing</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h3>Creative Design</h3>
+<p>Unlock your artistic potential and learn the principles of design to create visually stunning projects.</p>
+
 			</div>
 		</div>
 
@@ -319,8 +321,9 @@
 				<i class="fa-solid fa-code"></i>
 			</div>
 			<div class="category-desc">
-				<h3>Development</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h3> Development</h3>
+<p>Enhance your coding skills and build robust applications through hands-on projects and expert guidance.</p>
+
 			</div>
 		</div>
 
@@ -329,8 +332,9 @@
 				<i class="fa-solid fa-bullhorn"></i>
 			</div>
 			<div class="category-desc">
-				<h3>Marketing</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h3>Digital Marketing</h3>
+<p>Learn the strategies and tools to effectively promote your brand online and reach a wider audience.</p>
+
 			</div>
 		</div>
 
@@ -339,8 +343,9 @@
 				<i class="fa-solid fa-camera"></i>
 			</div>
 			<div class="category-desc">
-				<h3>Photography</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h3>Visual Storytelling</h3>
+<p>Capture stunning images and learn the art of photography to express your unique perspective and creativity.</p>
+
 			</div>
 		</div>
 
