--- a/index.html
+++ b/index.html
@@ -357,9 +357,10 @@
 <!--   *** Teacher Section Starts ***   -->
 <section class="instructor">
 	<div class="instructor-container">
-		<h2>Become an instructor with Bright Future Platform</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<button class="teacher-btn btn">Your Details</button>
+		<h2>Join the Bright Future Platform as an Instructor</h2>
+<p>Share your knowledge and passion with aspiring learners. Become part of a vibrant community that values education and innovation.</p>
+<button class="teacher-btn btn">Submit Your Information</button>
+
 	</div>
 </section>
 <!--   *** Teacher Section Ends ***   -->
@@ -368,8 +369,9 @@
 <section class="testimonials" id="testimonials">
 	<!--   === Testimonials Section Header Starts ===   -->
 	<header class="section-header">
-		<h1>Testimonials</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<h1>What Our Students Say</h1>
+<p>Hear from our learners about their experiences and how our courses have helped them achieve their goals.</p>
+
 	</header>
 	<!--   === Testimonials Section Header Ends ===   -->
 	<!--   === Testimonials Contents Starts ===   -->
@@ -381,11 +383,13 @@
     				<img src="images/testimonials/student-1.jpg">
     			</div>
     			<div class="profile-desc">
-    				<span>Person Name</span>
-    				<span>Description</span>
+    				<span>Michel</span>
+                   <span>Feedback or Review</span>
+
     			</div>
     		</div>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    		<p>"As a student, I found the course incredibly informative and engaging. The instructors were knowledgeable and supportive, making the learning experience enjoyable. I’ve gained valuable skills that I can apply in my career, and I highly recommend this platform to anyone looking to enhance their knowledge!"</p>
+
     		<div class="quote">
     			<i class="fa fa-quote-left"></i>
     		</div>
@@ -404,11 +408,12 @@
     				<img src="images/testimonials/student-1.jpg">
     			</div>
     			<div class="profile-desc">
-    				<span>Person Name</span>
-    				<span>Description</span>
+    				<span>Andrio</span>
+    				<span>Feedback or Review</span>
     			</div>
     		</div>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    		<p>"As a student, I found the course incredibly informative and engaging. The instructors were knowledgeable and supportive, making the learning experience enjoyable. I’ve gained valuable skills that I can apply in my career, and I highly recommend this platform to anyone looking to enhance their knowledge!"</p>
+
     		<div class="quote">
     			<i class="fa fa-quote-left"></i>
     		</div>
@@ -427,11 +432,12 @@
     				<img src="images/testimonials/student-1.jpg">
     			</div>
     			<div class="profile-desc">
-    				<span>Person Name</span>
-    				<span>Description</span>
+    				<span>Riot</span>
+    				<span>Feedback or Reviews</span>
     			</div>
     		</div>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    		<p>"As a student, I found the course incredibly informative and engaging. The instructors were knowledgeable and supportive, making the learning experience enjoyable. I’ve gained valuable skills that I can apply in my career, and I highly recommend this platform to anyone looking to enhance their knowledge!"</p>
+
     		<div class="quote">
     			<i class="fa fa-quote-left"></i>
     		</div>
@@ -450,11 +456,12 @@
     				<img src="images/testimonials/student-1.jpg">
     			</div>
     			<div class="profile-desc">
-    				<span>Person Name</span>
-    				<span>Description</span>
+    				<span>Alex</span>
+    				<span>Feedback and Reviews</span>
     			</div>
     		</div>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    		<p>"As a student, I found the course incredibly informative and engaging. The instructors were knowledgeable and supportive, making the learning experience enjoyable. I  gained valuable skills that I can apply in my career, and I highly recommend this platform to anyone looking to enhance their knowledge!"</p>
+
     		<div class="quote">
     			<i class="fa fa-quote-left"></i>
     		</div>
@@ -473,11 +480,12 @@
     				<img src="images/testimonials/student-1.jpg">
     			</div>
     			<div class="profile-desc">
-    				<span>Person Name</span>
-    				<span>Description</span>
+    				<span>Niyon</span>
+    				<span>Feedback and Reviews</span>
     			</div>
     		</div>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+    		<p>"As a student, I found the course incredibly informative and engaging. The instructors were knowledgeable and supportive, making the learning experience enjoyable. I’ve gained valuable skills that I can apply in my career, and I highly recommend this platform to anyone looking to enhance their knowledge!"</p>
+
     		<div class="quote">
     			<i class="fa fa-quote-left"></i>
     		</div>
@@ -506,8 +514,9 @@
 				<img src="images/home/logo.png">
 			</div>
 			<div class="col-contents">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+				<p>Welcome to our online course platform, where knowledge meets convenience. Explore a diverse range of courses designed to help you learn at your own pace and achieve your professional goals.</p>
+<p>Join a community of learners and instructors dedicated to empowering you with the skills needed for success in today's competitive landscape.</p>
+
 			</div>
 		</div>
 
@@ -518,19 +527,19 @@
 			<div class="col-contents">
 				<div class="contact-row">
 					<span>Address</span>
-					<span>1234 Street, Colifornia, USA</span>
+					<span>778 Colombo SriLanka</span>
 				</div>
 				<div class="contact-row">
 					<span>Phone</span>
-					<span>+012 987 23456</span>
+					<span>+945 987 23456</span>
 				</div>
 				<div class="contact-row">
 					<span>Website</span>
-					<span>Five-Star-Tutorials.com</span>
+					<span>Riveen.com</span>
 				</div>
 				<div class="contact-row">
 					<span>Email</span>
-					<span>info@Five-Star-Tutorials.com</span>
+					<span>info@Bright.com</span>
 				</div>
 			</div>
 		</div>
@@ -563,7 +572,7 @@
 	</div>
 	<!--   === Footer Contents Ends ===   -->
 	<div class="copy-rights">
-		<p>Created By <b>Five Star Tutorials</b> All Rights Reserved</p>
+		<p>Created By <b>Riveen_Official🦂</b> All Rights Reserved</p>
 	</div>
 
 </section>
